    for reporting and submitting the patch. (closes #43)

  * Disabled cache sizing for SagMemoryCache due to PHP's memory monitoring
    being unreliable. The memory cache is no longer capped by Sag. (closes #22)

  * Fixing an issue where the SagHTTPAdapter class's file wasn't being required
    properly, causing class not found exceptions.

Version 0.7.1
-------------

Fixed Bugs

  * The cURL HTTP library was choking on a HTTP/1.1 Continue header. Only some
    installations were running into this problem, depending on their cURL
    configuration and version.

Version 0.7.0
-------------

New Features

  * The HTTP socket code was abstracted out of the core Sag class into its own
    HTTP module. It is called SagNativeHTTPAdapter and remains the default
    transport mechanism. This allows for drivers to be written that leverage
    different HTTP libraries, potentially adding extra functionality. The
    SagNativeHTTPAdapter is referenced by the Sag::$HTTP_NATIVE_SOCKETS static
    public variable and can be specified with the setHTTPAdapter() function.
    (closes #12)

  * cURL can now be used when communicating with CouchDB, allowing for
    additional functionality. If your system has the cURL PHP extension
    installed then you can tell Sag to use it by calling
    `$sag->setHTTPAdapter(Sag::$HTTP_CURL);`.

  * SSL is now supported if you use cURL instead of native sockets. This
    introduces setSSL() to turn SSL on/off, and setSSLCert() to specify a
    certificate file to verify against. Verification is only supported if you
    provide a certificate with setSSLCert(). HTTP libraries that do not support
    SSL (ie., native sockets) will throw a SagException if you call an SSL
    function.

  * You can now tell getAllDocs() to sort in descending order. Thanks to cygal
    (github/cygal) for the patch and pull request. (closes #31)

Fixed Bugs

  * If you set the database name and then set it again with the same value, but